--- a/newmessage.html
+++ b/newmessage.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+
+  <div>
+    <h1>Welcome to the guestbook!</h1>
+    <ul>
+      <div><li><a href="/readguestbook">Read Guestbook</a></li></div>
+      <div><li><a href="/newmessage">New Message</a></li></div>
+      <div><li><a href="/ajaxmessage">Ajax Message</a></li></div>
+    </ul>
+  </div>
+
   <div>
     <form method="POST" action="/newmessage2">
       <div class="form-group">
