--- a/ajaxmessage.html
+++ b/ajaxmessage.html
@@ -4,27 +4,42 @@
 <head>
   <!-- Tyylitiedosto -->
   <link rel="stylesheet" href="tyylit.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
 <body>
   <div>
-    <form method="POST" action="/kirjaudu">
+    <h1>Welcome to the guestbook!</h1>
+    <ul>
+      <div>
+        <li><a href="/readguestbook">Read Guestbook</a></li>
+      </div>
+      <div>
+        <li><a href="/newmessage">New Message</a></li>
+      </div>
+      <div>
+        <li><a href="/ajaxmessage">Ajax Message</a></li>
+      </div>
+    </ul>
+  </div>
+  <div>
+    <form method="POST" action="/ajaxmessage">
       <div class="form-group">
-        <label for="exampleInputN">Name</label>
-        <input type="name" class="form-control" id="name" placeholder="Write your name here" name="name" />
+        <label for="InputN">Name</label>
+        <input type="name" class="form-control" id="nameajax" placeholder="Write your name here" name="name" />
       </div>
       <div class="form-group">
-        <label for="exampleInputC">Country</label>
-        <input type="Country" class="form-control" id="country" placeholder="Where are you writing from?"
+        <label for="InputC">Country</label>
+        <input type="Country" class="form-control" id="countryajax" placeholder="Where are you writing from?"
           name="country" />
       </div>
       <div class="form-group">
-        <label for="exampleInputM">Message</label>
-        <input type="Message" class="form-control" id="message" placeholder="What do you want to tell us?"
+        <label for="InputM">Message</label>
+        <input type="Message" class="form-control" id="messageajax" placeholder="What do you want to tell us?"
           name="message" />
       </div>
-      <button type="submit" id="button" class="button">
+      <button type="submit" id="buttonajax" class="button">
         Submit
       </button>
     </form>
@@ -41,7 +56,7 @@
   </div>
 
   <!-- javascript tiedosto -->
-  <script src="javascript.js" type="text/javascript"></script>
+  <script src="ajaxmessages.js" type="text/javascript"></script>
 </body>
 
 </html>
