--- a/newmessage.html
+++ b/newmessage.html
@@ -4,7 +4,8 @@
 <head>
   <!-- Tyylitiedosto -->
   <link rel="stylesheet" type="text/css" href="tyylit.css">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -44,11 +45,6 @@
     <div id="results">&nbsp;</div>
   </div>
 
-  <div id=hidden>
-
-    <table id=guestbookTable></table>
-
-  </div>
 
   <!-- javascript tiedosto -->
   <script src="messages.js"></script>
