--- a/readguestbook.html
+++ b/readguestbook.html
@@ -28,7 +28,7 @@
 
     <div class="messageDiv">
         <h2>Messages</h2>
-        <div id="msgtableajax"></div>
+        <div id="msgtable"></div>
     </div>
     </div>
     <script src="messages.js"></script>
