--- a/ajaxmessage.html
+++ b/ajaxmessage.html
@@ -24,19 +24,19 @@
     <form method="POST" action="/ajaxmessage">
       <div class="form-group">
         <label for="InputN">Name</label>
-        <input type="name" class="form-control" id="nameajax" placeholder="Write your name here" name="name" />
+        <input type="name" class="form-control" id="nameajax" placeholder="Write your name here" name="nameajax" />
       </div>
       <div class="form-group">
         <label for="InputC">Country</label>
         <input type="Country" class="form-control" id="countryajax" placeholder="Where are you writing from?"
-          name="country" />
+          name="countryajax" />
       </div>
       <div class="form-group">
         <label for="InputM">Message</label>
         <input type="Message" class="form-control" id="messageajax" placeholder="What do you want to tell us?"
-          name="message" />
+          name="messageajax" />
       </div>
-      <button type="submit" id="buttonajax" class="button">
+      <button type="button" id="buttonajax" class="button">
         Submit
       </button>
     </form>
@@ -48,7 +48,7 @@
 
   <div id=hidden>
 
-    <table id=guestbookTable></table>
+    <table id=msgtableajax></table>
 
   </div>
 
