--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </ul>
     </nav>
   </div>
-
+  <div>
+    <p>Guestbook app made for a course in Laurea University of Applied science.</p>
+  </div>
 </body>
 <script src="messages.js"></script>
 
