--- a/ajaxmessage.html
+++ b/ajaxmessage.html
@@ -24,17 +24,17 @@
     <form method="POST" action="/ajaxmessage">
       <div class="form-group">
         <label for="InputN">Name</label>
-        <input type="name" class="form-control" id="nameajax" placeholder="Write your name here" name="nameajax" />
+        <input type="name" class="form-control" id="nameajax" placeholder="Write your name here" name="name" />
       </div>
       <div class="form-group">
         <label for="InputC">Country</label>
         <input type="Country" class="form-control" id="countryajax" placeholder="Where are you writing from?"
-          name="countryajax" />
+          name="country" />
       </div>
       <div class="form-group">
         <label for="InputM">Message</label>
         <input type="Message" class="form-control" id="messageajax" placeholder="What do you want to tell us?"
-          name="messageajax" />
+          name="message" />
       </div>
       <button type="button" id="buttonajax" class="button">
         Submit
