--- a/newmessage.html
+++ b/newmessage.html
@@ -25,17 +25,17 @@
     <form method="POST" action="/newmessage2">
       <div class="form-group">
         <label for="exampleInputN">Name</label>
-        <input type="name" class="form-control" id="name" placeholder="Write your name here" name="name" />
+        <input type="name" class="form-control" id="name" placeholder="Write your name here" name="name" required="true" />
       </div>
       <div class="form-group">
         <label for="exampleInputC">Country</label>
         <input type="Country" class="form-control" id="country" placeholder="Where are you writing from?"
-          name="country" />
+          name="country" required="true"/>
       </div>
       <div class="form-group">
         <label for="exampleInputM">Message</label>
         <input type="Message" class="form-control" id="message" placeholder="What do you want to tell us?"
-          name="message" />
+          name="message" required="true"/>
       </div>
       <button type="submit" id="button" class="button">
         Submit
