--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
     </nav>
   </div>
   <div>
-    <p>Guestbook app made for a course in Laurea University of Applied science.</p>
+    <p>Guestbook app made for a course in Laurea University of Applied science.
+
+      Create a Guestbook app which will allow users to add messages to a public guestbook page.
+    </p>
+    <img
+      src="https://www.everplans.com/sites/default/files/styles/article_header_image/public/sign-guestbook-at-funeral-main.jpg?itok=yIwUZ7_Y"
+      class="img-fluid" alt="Responsive image">
+
   </div>
 </body>
 <script src="messages.js"></script>
