--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
   </div>
-  <div>
+  <div class="text-center">
     <p>Guestbook app made for a course in Laurea University of Applied science.
 
       Create a Guestbook app which will allow users to add messages to a public guestbook page.
