--- a/ajaxmessage.html
+++ b/ajaxmessage.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="text-center">
     <h1><a href="/">Welcome to the guestbook!</a></h1>
     <nav class="navbar navbar-dark bg-dark">
       <ul>
