--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="text-center">
     <h1>Welcome to the guestbook!</h1>
 
     <nav class="navbar navbar-dark bg-dark">
