--- a/readguestbook.html
+++ b/readguestbook.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="text-center">
         <h1><a href="/">Welcome to the guestbook!</a></h1>
         <nav class="navbar navbar-dark bg-dark">
             <ul>
